--- a/XProject/Views/Coach/Index.cshtml
+++ b/XProject/Views/Coach/Index.cshtml
@@ -19,7 +19,7 @@
                         </div>
                         <div class="col-md-5">
                             <div class="body-content">
-                                <h4> @item.Email </h4>
+                                <h4> @item.Name </h4>
                                 <span>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -28,8 +28,8 @@
                             </div> <!-- body-content -->
                         </div>
                         <div class="col-md-3">
-                            <label>Price</label><br />
-                            <label> @item.nationalId</label> <span> ريال </span>
+                            <label>Hours</label><br />
+                            <label> @item.Hours</label> <span> ساعات </span>
                         </div>
                         <div class="col-md-2">
                             <a class="btn-more" asp-controller="" asp-action=""> التفاصيل </a>
