--- a/XProject/Views/Shared/User/_RightMenuUserPartial.cshtml
+++ b/XProject/Views/Shared/User/_RightMenuUserPartial.cshtml
@@ -12,12 +12,12 @@
             <a asp-controller="Trainee" asp-action="MyRequests">
                 <i class="fas fa-receipt"></i> طلباتي </a>
         </li>
-        <li>
+        @*<li>
             <a asp-controller="Trainee" asp-action="Settings">
                 <i class="fas fa-user-cog"></i> الإعدادات</a>
-        </li>
+        </li>*@
     </ul>
 </div>
-<div class="ads-box">
+@*<div class="ads-box">
     <div class="insaid-text"> ADS </div>
-</div>
+</div>*@
