--- a/XProject/Views/Shared/User/_StatisticUserPartial.cshtml
+++ b/XProject/Views/Shared/User/_StatisticUserPartial.cshtml
@@ -3,14 +3,14 @@
         <div class="col-md-3">
             <div class="open-order">
                 <label>الطلبات المفتوحة  </label>
-                <h4> 0 </h4>
+                <h4> @ViewBag.openTicket </h4>
             </div><!-- open-order -->
         </div> <!-- col-md-4 -->
 
         <div class="col-md-3">
             <div class="open-order">
                 <label>الطلبات المغلقة  </label>
-                <h4> 1 </h4>
+                <h4> @ViewBag.CloseTicket </h4>
             </div><!-- open-order -->
         </div> <!-- col-md-4 -->
 
