--- a/XProject/Views/Coach/MyProfile.cshtml
+++ b/XProject/Views/Coach/MyProfile.cshtml
@@ -1,4 +1,4 @@
-﻿@model Days
+﻿@model XProject.ViewModels.DaysAndApplactionUser
 @{ ViewData["Title"] = "MyProfile"; }
 
 @foreach (var item in @ViewBag.InfoCoach)
@@ -17,12 +17,12 @@
                 <input readonly value="@item.nationalId" class="form-control" />
             </div>
 
-            <form method="post" >
+            <form method="post">
 
 
                 <div class="form-group">
                     <label>  الساعات </label>
-                    <select  name="hour" class="form-control">
+                    <select name="hour" class="form-control">
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -37,20 +37,37 @@
                         <label> الايام المناسبة لك </label>
                         <ul>
                             @*<li>
-                                <input class="form-check" name="AllDaySelected" value="@Model.Namd" type="checkbox" id="@Model.Id" checked="@Model.IsCheched" />
-                            </li>*@
+                        <input class="form-check" name="AllDaySelected" value="@Model.Namd" type="checkbox" id="@Model.Id" checked="@Model.IsCheched" />
+                    </li>*@
                             @foreach (var day in @ViewBag.days)
                             {
                                 <li>
-                                    <input class="form-check" name="AllDaySelected" 
+                                    <input class="form-check" name="AllDaySelected"
                                            type="checkbox" id="@day.Id"
                                            checked="@day.IsCheched" />
                                     <label for="@day.Id"> @day.Namd</label>
-                                </li>}
+                                </li>
+}
 
                         </ul>
                     </div>
                 </div>
+                <br /><br />
+                
+                <hr />
+
+                <label>  تغيير كلمة المرور </label>
+                <div class="form-group">
+                    <label> كلمة المرور </label>
+                    <input asp-for="Password" type="password" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label> تأكيد كلمة المرور </label>
+                    <input asp-for="Confirmpassword" type="password" class="form-control" />
+                </div>
+
+              
 
                 <br /> <br />
 
