--- a/XProject/Views/Shared/_RightMenuCoachPartial.cshtml
+++ b/XProject/Views/Shared/_RightMenuCoachPartial.cshtml
@@ -11,16 +11,16 @@
             </a>
         </li>
         <li>
-            <a href="#"> <i class="fas fa-receipt">
+            <a asp-controller="Coach" asp-action="requestOffer"> <i class="fas fa-receipt">
               </i> الطلبات </a>
         </li>
-        <li>
+        @*<li>
             <a asp-controller="Coach" asp-action="Settings">
                 <i class="fas fa-user-cog"></i> الإعدادات
             </a>
-        </li>
+        </li>*@
     </ul>
 </div>
-<div class="ads-box">
+@*<div class="ads-box">
     <div class="insaid-text"> ADS </div>
-</div>
+</div>*@
