--- a/XProject/Views/Trainee/Settings.cshtml
+++ b/XProject/Views/Trainee/Settings.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ApplactionUsers
 @{
     ViewData["Title"] = "Settings";
 }
@@ -11,22 +11,28 @@
         </div>
 
         <div class="col-md-8">
-
-            <div class="form-group">
-                <label> ....... </label>
-                <input readonly value="" class="form-control" />
-            </div>
-
-            <form method="post">
+            <form method="post" asp-controller="Trainee" asp-action="Settings">
+                <div class="form-group">
+                    <label> الاســـم </label>
+                    <input asp-for="Name" class="form-control" />
+                </div>
 
                 <div class="form-group">
-                    <label>  ....... </label>
+                    <label> كلمة المرور </label>
+                    <input asp-for="Password" type="password" value="@Model.Password" class="form-control" />
                 </div>
+
+                <div class="form-group">
+                    <label>  تأكيد كلمة المرور </label>
+                    <input asp-for="Confirmpassword" type="password" value="@Model.Confirmpassword" class="form-control" />
+                </div>
+
                 <br />
                 <div class="form-group">
                     <div class="box-days">
-                        <label> ....... </label>
-
+                        <label> البريد الإلكتروني </label>
+                        @*<label>@Model.Email</label>*@
+                        <input asp-for="Email" class="form-control" />
                     </div>
                 </div>
 
